--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Harambe Tribute</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      min-height: 100vh;
       background: url('harambe_in_the_clouds.png') no-repeat center center fixed;
       background-size: cover;
       font-family: sans-serif;
@@ -20,26 +21,91 @@
       left: 0;
       width: 100%;
       height: 1.5rem;
-      background-color: #8B0000; /* Dark red */
+      background-color: #8B0000;
       color: white;
       text-align: center;
       line-height: 1.5rem;
       font-size: 0.9rem;
       z-index: 1000;
     }
+
+    .music-toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: rgba(0, 0, 0, 0.5);
+      border: none;
+      color: white;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .music-toggle:hover {
+      background: rgba(0, 0, 0, 0.7);
+    }
+
+    @media (max-width: 600px) {
+      footer {
+        font-size: 0.8rem;
+      }
+
+      .music-toggle {
+        font-size: 0.9rem;
+        padding: 0.4rem 0.8rem;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <!-- Optional main content -->
   <div style="padding: 2rem;">
-    <h1>Welcome to the Cloud</h1>
+    <h1 style="margin-top: 0;">Welcome to the Cloud</h1>
     <p>Where legends never die.</p>
   </div>
+
+  <audio autoplay loop muted id="bg-music">
+    <source src="harambe_theme.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <button class="music-toggle" id="music-toggle-btn">🔇 Unmute</button>
 
   <footer>
     Dicks out for Harambe
   </footer>
+
+  <script>
+    const audio = document.getElementById('bg-music');
+    const toggleBtn = document.getElementById('music-toggle-btn');
+
+    function updateButton() {
+      toggleBtn.textContent = audio.paused || audio.muted ? '🔇 Unmute' : '🔊 Pause';
+    }
+
+    toggleBtn.addEventListener('click', () => {
+      if (audio.muted || audio.paused) {
+        audio.muted = false;
+        audio.play();
+      } else {
+        audio.pause();
+      }
+      updateButton();
+    });
+
+    // First interaction to unmute autoplay audio
+    window.addEventListener('click', () => {
+      if (audio.muted) {
+        audio.muted = false;
+        audio.play();
+        updateButton();
+      }
+    }, { once: true });
+
+    updateButton();
+  </script>
 
 </body>
 </html>
