--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
 
   <audio autoplay loop muted id="bg-music">
-    <source src="harambe_theme.mp3" type="audio/mpeg">
+    <source src="harambe_tribute.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
