--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       object-fit: cover;
       z-index: 0;
       opacity: 0;
-      transition: opacity 1s ease;
+      /* transition: opacity 1s ease; */
       pointer-events: none;
     }
 
