--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       font-size: 1rem;
       border-radius: 0.5rem;
       cursor: pointer;
-      z-index: 1001;
-        }
+      z-index: 12;
+    }
 
     video {
       position: absolute;
@@ -78,7 +78,7 @@
     <p>Where legends never die.</p>
   </div>
   
-  <audio autoplay loop muted id="bg-music">
+  <audio autoplay loop muted id="bg-music" style="z-index: 12;">
     <source src="harambe_tribute.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
